--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,19 @@ h1 {
   font-size: 30px;
 }
 
-#testQuarryContainer {
-  width: 100rem;
+main {
+  width: 100%;
   display: flex;
   flex-direction: row; 
-  justify-content: flex-start;
+  justify-content: space-around; 
+  align-items: flex-start;
+}
+
+#testQuarryContainer {
+  width: 75rem;
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-around; 
   flex-wrap: wrap;
   align-items: center;
 }
@@ -15,4 +23,20 @@ h1 {
   border: 3px solid rgb(0, 0, 0);
   width: 20rem;
   height: 20rem;
+}
+
+#chartContainer {
+  width: 75rem;
+}
+
+#resultsContainer {
+  width: 100%;
+  height: 100%;
+}
+
+#getResults div {
+  width: 6rem;
+  margin: 20px;
+  background-color: azure;
+  border: 2px black solid;
 }
